Add correct serial monitor baud rate Add DEBUG_ESP_PORT definition for debug msg

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,10 @@ default_envs = nodemcuv2
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	bblanchon/ArduinoJson@^6.17.0
 	arduino-libraries/NTPClient@^3.1.0
+
+; For debug_messages in serial monitor
+build_flags = -D DEBUG_ESP_PORT=Serial
